--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "axios": "0.18.0",
+    "canvas2image": "^1.0.5",
     "clipboard": "1.7.1",
     "codemirror": "5.39.2",
     "connect": "3.6.6",
@@ -44,6 +45,7 @@
     "element-ui": "2.4.6",
     "file-saver": "1.3.8",
     "font-awesome": "4.7.0",
+    "html2canvas": "^1.0.0-alpha.12",
     "js-cookie": "2.2.0",
     "jsonlint": "1.6.3",
     "jszip": "3.1.5",
