--- a/package.json
+++ b/package.json
@@ -38,19 +38,22 @@
     "clipboard": "1.7.1",
     "codemirror": "5.39.2",
     "connect": "3.6.6",
+    "downloadjs": "^1.4.7",
     "driver.js": "0.5.2",
     "dropzone": "5.2.0",
     "echarts": "4.1.0",
     "element-ui": "2.4.6",
-    "file-saver": "1.3.8",
+    "file-saver": "^1.3.8",
     "font-awesome": "4.7.0",
     "html2canvas": "^1.0.0-alpha.12",
     "js-cookie": "2.2.0",
+    "js-xlsx": "^0.8.22",
     "jsonlint": "1.6.3",
     "jszip": "3.1.5",
     "mockjs": "1.0.1-beta3",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "qs": "^6.5.2",
     "screenfull": "3.3.3",
     "showdown": "1.8.6",
     "simplemde": "1.11.2",
@@ -103,7 +106,7 @@
     "rimraf": "2.6.2",
     "sass-loader": "7.0.3",
     "script-ext-html-webpack-plugin": "2.0.1",
-    "script-loader": "0.7.2",
+    "script-loader": "^0.7.2",
     "semver": "5.5.0",
     "serve-static": "1.13.2",
     "shelljs": "0.8.2",
